[package]
name = "rate_limiter"
version = "0.1.0"
edition = "2021"
author = "Dinesh Pandikona <teslaatozinspires7@gmail.com>"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
redis = { version = "0.29.5", features = ["async-std-comp", "tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["v4"] }
dotenv = "0.15"
futures = "0.3.31"
