[package]
name = "rate_limiter"
version = "0.1.0"
edition = "2021"
author = "Dinesh Pandikona <teslaatozinspires7@gmail.com>"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
redis = { version = "0.29.5", features = ["async-std-comp", "tokio-comp", "connection-manager"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["v4"] }
dotenv = "0.15"
futures = "0.3.31"
rand = "0.9.1"
structopt = "0.3.26"
prettytable-rs = "0.10"
indicatif = "0.17.3"
ctrlc = "3.2.5"

[dev-dependencies]
tokio-test = "0.4.2"
tracing-test = "0.2.4"

[[bin]]
name = "rate_limiter_cli"
path = "src/bin/rate_limiter_cli.rs"

[[bin]]
name = "rate_limiter_bench"
path = "src/bin/rate_limiter_bench.rs"

[lib]
name = "rate_limiter"
path = "src/lib.rs"